--- a/VendorManager/Views/Shared/Footer.cshtml
+++ b/VendorManager/Views/Shared/Footer.cshtml
@@ -1,4 +1,4 @@
 <div id='footer'>
   <p><a href='/'>Home</a></p>
-  <p><a href='/vendors'>Back to Vendors</a></p>
+  <p><a href='/vendors'>Vendors</a></p>
 </div>
