--- a/VendorManager/wwwroot/css/styles.css
+++ b/VendorManager/wwwroot/css/styles.css
@@ -24,13 +24,13 @@
 
 .vendorGrid {
   display: grid;
-  grid-template-columns: 2fr 1fr 6fr;
+  grid-template-columns: 2fr 1fr 5fr;
   grid-template-rows: 1fr 4fr 4fr;
-  grid-column-gap: 5px;
-  grid-row-gap: 5px;
+  grid-column-gap: 1rem;
+  grid-row-gap: 1rem;
   grid-template-areas:
     "subheader orderButton orderHeader"
-    "vendorInfo orders orders"
+    "contactInfo orders orders"
     "contactInfo orders orders";
   padding-left: 1rem;
 }
@@ -41,6 +41,7 @@
 
 .orderButton {
   grid-area: orderButton;
+  justify-self: center;
 }
 
 .orderList {
