--- a/VendorManager/Views/Shared/Header.cshtml
+++ b/VendorManager/Views/Shared/Header.cshtml
@@ -1,4 +1,14 @@
 <div id='header'>
-  <h1>Corgibyte Vendor Manager</h1>
-  <hr>
+  <div id='headerTitle'>
+    <h1>Corgibyte Vendor Manager</h1>
+  </div>
+  <div id='homeButton'>
+    <a href='/' class='btn btn-secondary' role='button'>Home</a>
+  </div>
+  <div id='vendorListButton'>
+    <a href='/vendors' class='btn btn-secondary' role='button'>Vendors List</a>
+  </div>
+  <div id="separator">
+    <hr>
+  </div>
 </div>
