--- a/VendorManager/Views/Home/Index.cshtml
+++ b/VendorManager/Views/Home/Index.cshtml
@@ -2,6 +2,7 @@
   Layout = "_Layout";
 }
 
-<div class="container">
+<div id="splash">
   <h1>Welcome to the Corgibyte Vendor Manager</h1>
+  <a href='/vendors' class='btn btn-primary big-btn' role='button'>Go To Vendors List</a>
 </div>
