--- a/VendorManager/Views/Shared/Header.cshtml
+++ b/VendorManager/Views/Shared/Header.cshtml
@@ -8,7 +8,7 @@
   <div id='vendorListButton'>
     <a href='/vendors' class='btn btn-secondary' role='button'>Vendors List</a>
   </div>
-  <div id="separator">
+  <div class="separator">
     <hr>
   </div>
 </div>
