--- a/VendorManager/wwwroot/css/styles.css
+++ b/VendorManager/wwwroot/css/styles.css
@@ -1,3 +1,31 @@
+:root {
+  --main-bg-color: #2E3440;
+  --second-bg-color: #3B4252;
+  --third-bg-color: #4C566A;
+  --bright-contrast: #ECEFF4;
+  --medium-contrast: #E5E9F0;
+  --low-contrast: #D8DEE9;
+  --frost-01: #8FBCBB;
+  --frost-02: #88C0D0;
+  --frost-03: #81A1C1;
+  --frost-04: #5E81AC;
+  --aurora-01: #BF616A;
+  --aurora-02: #D08770;
+  --aurora-03: #EBCB8B;
+}
+
+p {
+  color: var(--bright-contrast);
+}
+
+h1, h2, h3, h4, h5, h6 {
+  color: var(--frost-02);
+}
+
+body {
+  background-color: var(--main-bg-color);
+}
+
 #footer > p {
   display:inline;
   text-align: center;
@@ -25,7 +53,7 @@
 .vendorGrid {
   display: grid;
   grid-template-columns: 2fr 1fr 5fr;
-  grid-template-rows: 1fr 4fr 4fr;
+  grid-template-rows: 1fr 1fr 4fr;
   grid-column-gap: 1rem;
   grid-row-gap: 2rem;
   grid-template-areas:
@@ -33,6 +61,31 @@
     "contactInfo orders orders"
     "contactInfo orders orders";
   padding-left: 1rem;
+}
+
+.vendorsList {
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-rows: 1fr 2rem; 3fr;
+  grid-template-areas:
+    "vendorsTitle vendorsAddButton . ."
+    "separator separator separator separator"
+    ". vendorsList vendorsList vendorsList";
+  margin-left:3rem;
+  margin-right:10rem;
+  border:1px solid black;
+  border-radius:15px;
+  padding:1rem;
+  background-color: var(--second-bg-color);
+}
+
+.vendorsTitle {
+  grid-area: vendorsTitle;
+}
+
+.vendorsAddButton {
+  grid-area: vendorsAddButton;
+  align-self: center;
 }
 
 #header {
@@ -43,8 +96,10 @@
     "separator separator separator separator";
 }
 
-#separator {
+.separator {
   grid-area: separator;
+  color: var(--frost-01);
+  max-height: 1rem;
 }
 
 #homeButton {
@@ -109,4 +164,75 @@
 .big-btn {
   width:60%;
   margin-left:4rem;
+}
+
+.btn-secondary {
+  color: var(--bright-contrast);
+  background-color: var(--frost-04);
+  border-color: var(--frost-03);
+}
+
+.btn-secondary:hover {
+  background-color: var(--aurora-02);
+  border-color: var(--frost-03);
+}
+
+.inputContainer {
+  background-color: var(--second-bg-color);
+  margin:1rem 3rem 0 3rem;
+  border:1px var(--medium-contrast) solid;
+  border-radius:15px;
+  padding: 1rem;
+}
+
+input[type="text"], textarea, input[type="email"] {
+  background-color: var(--third-bg-color);
+  color: var(--medium-contrast);
+  margin-bottom:1rem;
+}
+
+input[type="text"]:focus, textarea:focus, input[type="email"]:focus {
+  background-color: var(--main-bg-color);
+  color: var(--medium-contrast);
+}
+
+input[type="text"]::placeholder {
+  color:var(--medium-contrast);
+  opacity: 1;
+}
+
+input[type="email"]::placeholder {
+  color:var(--medium-contrast);
+  opacity: 1;
+}
+
+a:link {
+  color: var(--medium-contrast);
+}
+
+a:visited {
+  color: var(--medium-contrast);
+}
+
+a:hover {
+  color: var(--aurora-03);
+}
+
+.vendorsContent {
+
+  padding-top:0.5rem;
+  grid-area: vendorsList;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 250px);
+}
+
+.vendorItem {
+  border:1px var(--medium-contrast) solid;
+  border-radius:15px;
+  padding-top:0.5rem;
+  margin:0rem 0.5rem 1rem 0rem;
+}
+
+.vendorItem > p {
+  margin-left:2rem;
 }
