--- a/VendorManager/Views/Home/Index.cshtml
+++ b/VendorManager/Views/Home/Index.cshtml
@@ -4,5 +4,5 @@
 
 <div id="splash">
   <h1>Welcome to the Corgibyte Vendor Manager</h1>
-  <a href='/vendors' class='btn btn-primary big-btn' role='button'>Go To Vendors List</a>
+  <a href='/vendors' class='btn btn-secondary big-btn' role='button'>Go To Vendors List</a>
 </div>
