--- a/VendorManager/wwwroot/css/styles.css
+++ b/VendorManager/wwwroot/css/styles.css
@@ -41,10 +41,6 @@ body {
   padding:5px 5px 5px 5px;
 }
 
-#header {
-  padding:1rem;
-}
-
 #vendorInfo {
   max-width: fit-content;
   padding-right: 2rem;
@@ -53,7 +49,7 @@ body {
 .vendorGrid {
   display: grid;
   grid-template-columns: 2fr 1fr 5fr;
-  grid-template-rows: 1fr 1fr 4fr;
+  grid-template-rows: 1fr 1fr 2fr;
   grid-column-gap: 1rem;
   grid-row-gap: 2rem;
   grid-template-areas:
@@ -66,7 +62,7 @@ body {
 .vendorsList {
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
-  grid-template-rows: 1fr 2rem; 3fr;
+  grid-template-rows: 1fr 2rem 1fr;
   grid-template-areas:
     "vendorsTitle vendorsAddButton . ."
     "separator separator separator separator"
@@ -81,6 +77,7 @@ body {
 
 .vendorsTitle {
   grid-area: vendorsTitle;
+  align-self:center;
 }
 
 .vendorsAddButton {
@@ -89,8 +86,9 @@ body {
 }
 
 #header {
+  padding:1rem;
   display: grid;
-  grid-template-columns: 4fr 1fr 1fr 1fr;
+  grid-template-columns: 3fr 8rem 8rem 4fr;
   grid-template-areas:
     "headerTitle homeButton vendorListButton ."
     "separator separator separator separator";
@@ -138,6 +136,12 @@ body {
 
 .orderInfo {
   grid-area: orders;
+  background-color: var(--second-bg-color);
+  margin:1rem 0 0 0rem;
+  border:1px var(--medium-contrast) solid;
+  border-radius:15px;
+  padding: 1rem;
+  max-width: fit-content;
 }
 
 .vendorInfo {
@@ -150,9 +154,13 @@ body {
 
 .contactInfo {
   grid-area: contactInfo;
+  border:1px var(--medium-contrast) solid;
+  max-width:fit-content;
+  padding:1rem 1rem 0.5rem 0.5rem;
+  border-radius:15px;
 }
 
-.contactInfo > p, h5 {
+.contactInfo > p, .contactInfo > h5 {
   margin-bottom:1px;
   margin-left:1rem;
 }
@@ -164,6 +172,7 @@ body {
 .big-btn {
   width:60%;
   margin-left:4rem;
+  margin-top:2rem;
 }
 
 .btn-secondary {
@@ -185,23 +194,18 @@ body {
   padding: 1rem;
 }
 
-input[type="text"], textarea, input[type="email"] {
+input[type="text"], input[type="textarea"], input[type="datetime-local"], input[type="email"] {
   background-color: var(--third-bg-color);
   color: var(--medium-contrast);
   margin-bottom:1rem;
 }
 
-input[type="text"]:focus, textarea:focus, input[type="email"]:focus {
+input[type="text"]:focus, input[type="textarea"]:focus, input[type="email"]:focus, input[type="datetime-local"]:focus {
   background-color: var(--main-bg-color);
   color: var(--medium-contrast);
 }
 
-input[type="text"]::placeholder {
-  color:var(--medium-contrast);
-  opacity: 1;
-}
-
-input[type="email"]::placeholder {
+input[type="text"]::placeholder, input[type="textarea"]::placeholder, input[type="email"]::placeholder, input[type="datetime-local"]::placeholder {
   color:var(--medium-contrast);
   opacity: 1;
 }
@@ -229,10 +233,6 @@ a:hover {
 .vendorItem {
   border:1px var(--medium-contrast) solid;
   border-radius:15px;
-  padding-top:0.5rem;
-  margin:0rem 0.5rem 1rem 0rem;
-}
-
-.vendorItem > p {
-  margin-left:2rem;
+  padding: 0.5rem 0.5rem 0 1rem;
+  margin:0rem 0.5rem 0.5rem 0rem;
 }
